--- a/DevelopmentWorkflow.html
+++ b/DevelopmentWorkflow.html
@@ -9,6 +9,54 @@
 $ git remote add abel git@github.com:abeluck/qubes-manager.git</code></pre>
 <p>You can then proceed to easily develop in your own branches, pull in new commits from the dev branches, merge them, and eventually push to your own repo on github.</p>
 <p>When you are ready to submit your changes to Qubes to be merged, push your changes, then create a signed git tag (using <code>git tag -s</code>). Finally, send a letter to the Qubes listserv describing the changes and including the link to your repository. Don't forget to include your public PGP key you use to sign your tags.</p>
+<h3 id="Kernel-specificnotes">Kernel-specific notes</h3>
+<h4 id="PreparefreshversionofkernelsourceswithQubes-specificpatchesapplied">Prepare fresh version of kernel sources, with Qubes-specific patches applied</h4>
+<p>In qubes-builder/qubes-src/kernel:</p>
+<pre class="wiki"><code>make prep</code></pre>
+<p>The resulting tree will be in kernel-&lt;VERSION&gt;/linux-&lt;VERSION&gt;:</p>
+<pre class="wiki"><code>ls -ltrd kernel*/linux*</code></pre>
+<pre class="wiki"><code>drwxr-xr-x 23 user user 4096 Nov  5 09:50 kernel-3.4.18/linux-3.4.18
+drwxr-xr-x  6 user user 4096 Nov 21 20:48 kernel-3.4.18/linux-obj</code></pre>
+<h4 id="Gotothekerneltreeandupdatetheversion">Go to the kernel tree and update the version</h4>
+<p>In qubes-builder/qubes-src/kernel:</p>
+<pre class="wiki"><code>cd kernel-3.4.18/linux-3.4.18</code></pre>
+<h4 id="Changingtheconfig">Changing the config ===</h4>
+<p>In kernel-3.4.18/linux-3.4.18:</p>
+<pre class="wiki"><code>cp ../../config-pvops .config
+make oldconfig</code></pre>
+<p>Now change the configuration. For example, in kernel-3.4.18/linux-3.4.18:</p>
+<pre class="wiki"><code>make menuconfig</code></pre>
+<pre class="wiki"><code>cp .config ../../../config-pvops</code></pre>
+<h4 id="Patchingthecode">Patching the code</h4>
+<p>TODO: describe the workflow for patching the code, below are some random notes, not working well</p>
+<pre class="wiki"><code>ln -s ../../patches.xen
+export QUILT_PATCHES=patches.xen
+export QUILT_REFRESH_ARGS=&quot;-p ab --no-timestamps --no-index&quot;
+export QUILT_SERIES=../../series-pvops.conf
+
+quilt new patches.xen/pvops-3.4-0101-usb-xen-pvusb-driver-bugfix.patch
+quilt add drivers/usb/host/Kconfig drivers/usb/host/Makefile \
+        drivers/usb/host/xen-usbback/* drivers/usb/host/xen-usbfront.c \
+        include/xen/interface/io/usbif.h
+
+*edit something*
+
+quilt refresh
+cd ../..
+vi series-pvops.conf</code></pre>
+<h4 id="BuildingRPMS">Building RPMS</h4>
+<p>TODO: Is this step generic for all subsystems?</p>
+<p>Now it is a good moment to make sure you have changed kernel release name in rel-pvops file. For example, if you change it to '1debug201211116c' the resulting RPMs will be named 'kernel-3.4.18-1debug20121116c.pvops.qubes.x86_64.rpm'. This will help distinguish between different versions of the same package.</p>
+<p>You might want to take a moment here to review (git diff, git status), commit your changes locally.</p>
+<p>To actually build RPMS, in qubes-src/kernel:</p>
+<pre class="wiki"><code>make rpms</code></pre>
+<p>RPMS will appear in qubes-src/kernel/rpm/x86_64:</p>
+<pre class="wiki"><code>-rw-rw-r-- 1 user user 42996126 Nov 17 04:08 kernel-3.4.18-1debug20121116c.pvops.qubes.x86_64.rpm
+-rw-rw-r-- 1 user user 43001450 Nov 17 05:36 kernel-3.4.18-1debug20121117a.pvops.qubes.x86_64.rpm
+-rw-rw-r-- 1 user user  8940138 Nov 17 04:08 kernel-devel-3.4.18-1debug20121116c.pvops.qubes.x86_64.rpm
+-rw-rw-r-- 1 user user  8937818 Nov 17 05:36 kernel-devel-3.4.18-1debug20121117a.pvops.qubes.x86_64.rpm
+-rw-rw-r-- 1 user user 54490741 Nov 17 04:08 kernel-qubes-vm-3.4.18-1debug20121116c.pvops.qubes.x86_64.rpm
+-rw-rw-r-- 1 user user 54502117 Nov 17 05:37 kernel-qubes-vm-3.4.18-1debug20121117a.pvops.qubes.x86_64.rpm</code></pre>
 <h3 id="UsefulQubesBuildercommands">Useful <a href="/wiki/wiki/QubesBuilder">QubesBuilder</a> commands</h3>
 <ol>
 <li><em>make check</em> - will check if all the code was commited into repository and if all repository are tagged with signed tag.</li>
