--- a/DevelopmentWorkflow.html
+++ b/DevelopmentWorkflow.html
@@ -20,7 +20,7 @@ drwxr-xr-x  6 user user 4096 Nov 21 20:48 kernel-3.4.18/linux-obj</code></pre>
 <h4 id="Gotothekerneltreeandupdatetheversion">Go to the kernel tree and update the version</h4>
 <p>In qubes-builder/qubes-src/kernel:</p>
 <pre class="wiki"><code>cd kernel-3.4.18/linux-3.4.18</code></pre>
-<h4 id="Changingtheconfig">Changing the config ===</h4>
+<h4 id="Changingtheconfig">Changing the config</h4>
 <p>In kernel-3.4.18/linux-3.4.18:</p>
 <pre class="wiki"><code>cp ../../config-pvops .config
 make oldconfig</code></pre>
