--- a/TestTest.html
+++ b/TestTest.html
@@ -1,2 +1,3 @@
 <h1 id="Thisisatestpage">This is a test page</h1>
 <p>Please ignore.</p>
+<p><a href="/wiki/attachment/wiki/TestTest/snapshot1.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;snapshot1.png&quot; attached to TestTest" alt="No image &quot;snapshot1.png&quot; attached to TestTest" /></a></p>
