--- a/GettingStarted.html
+++ b/GettingStarted.html
@@ -10,7 +10,7 @@
 <li>untrusted</li>
 </ul>
 <p>Each domain, apart from having a distinct name, is also assigned a <strong>label</strong>, which basically is one of the several per-defined colors. These colors, which are used for drawing window decorations by the trusted Window Manager (color frames), are supposed to be user friendly, easy noticeable, indicators of how trusted a given window is. It's totally up to the user how he or she interprets these colors. For me, it has been somehow obvious to associate the red color with something that is untrusted and dangerous (the “red light” -- stop! danger!), green with something that is safe and trusted, while yellow and orange with something in the middle. I have also extended this scheme, to also include blue, and black, which I interpret as indicating progressively more trusted domains than green, with black being something ultimately trusted.</p>
-<p>&lt;screenshot of a window with decoration&gt;</p>
+<p><a href="/wiki/attachment/wiki/GettingStarted/snapshot12.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;snapshot12.png&quot; attached to GettingStarted" alt="No image &quot;snapshot12.png&quot; attached to GettingStarted" /></a></p>
 <p>There is, however, one special domain that is called <em>Dom0</em> which is where the Desktop Manager (currently KDE) runs, and this is where you log into. This domain doesn't have any networking connectivity and is essentially only dedicated for running the Window and Desktop Manager, nothing else. Specifically all the user applications run in AppVMs, never in Dom0.</p>
 <h2 id="QubesManagerandcommandlinetools">Qubes Manager and command line tools</h2>
 <p>TODO</p>
