--- a/SecurityBulletins.html
+++ b/SecurityBulletins.html
@@ -12,4 +12,5 @@
 <li><a href="https://groups.google.com/d/msg/qubes-devel/JIpZoQUP6dQ/g6TvtpUHzBQJ">​Qubes Security Bulletin #2</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/msg/2dece13ed1f9ad2d">​Qubes Security Bulletin #3</a></li>
 <li><a href="https://groups.google.com/group/qubes-devel/msg/28ecafd3c73ec1b0">​Qubes Security Bulletin #4</a></li>
+<li><a href="https://groups.google.com/group/qubes-devel/msg/add1e480d8642755">​Qubes Security Bulletin #5</a></li>
 </ul>
