--- a/HvmCreate.html
+++ b/HvmCreate.html
@@ -10,3 +10,9 @@
 <pre class="wiki"><code>qvm-start win7 --cdrom=/usr/local/iso/win7_en.iso</code></pre>
 <p>Now, the VM will start booting from the attached CDROM device, which in the example above just happens to be the Windows 7 installation disk. Depending on the OS that is being installed in the VM, one might be required to start the VM several times (as is the case e.g. with Windows 7 installation), because whenever the installer wants to &quot;reboot the system&quot;, it actually shutdowns the VM (and Qubes won't automatically start it), so several invocations of qvm-start command (as shown above) might be needed.</p>
 <p>&lt;screenshot&gt;</p>
+<h2 id="UsingInstallationISOslocatedinotherVMs">Using Installation ISOs located in other VMs</h2>
+<p>TODO</p>
+<h2 id="CloningHVMdomains">Cloning HVM domains</h2>
+<p>TODO</p>
+<h2 id="InstallingQubessupporttoolsinWindows7VMs">Installing Qubes support tools in Windows 7 VMs</h2>
+<p>TODO</p>
