--- a/HvmCreate.html
+++ b/HvmCreate.html
@@ -12,6 +12,8 @@
 <p>&lt;screenshot&gt;</p>
 <h2 id="UsingInstallationISOslocatedinotherVMs">Using Installation ISOs located in other VMs</h2>
 <p>TODO</p>
+<h2 id="SettingupnetworkingforHVMdomains">Setting up networking for HVM domains</h2>
+<p>TODO</p>
 <h2 id="CloningHVMdomains">Cloning HVM domains</h2>
 <p>TODO</p>
 <h2 id="InstallingQubessupporttoolsinWindows7VMs">Installing Qubes support tools in Windows 7 VMs</h2>
