--- a/UserDoc.html
+++ b/UserDoc.html
@@ -11,6 +11,7 @@
 <li>Using Disposable VMs</li>
 <li><a href="/wiki/wiki/QubesFirewall">Using Qubes firewall</a></li>
 <li><a href="/wiki/wiki/StickMounting">How to mount USB stick to an AppVM?</a></li>
+<li><a href="/wiki/wiki/KeyGen">Key generation inside Qubes VMs?</a></li>
 <li><a href="/wiki/wiki/AssigningDevices">How to assign full PCI/e device to a VM?</a></li>
 </ul>
 <p>Advanced topics:</p>
