--- a/QubesDocs.html
+++ b/QubesDocs.html
@@ -1,6 +1,7 @@
 <h1 id="QubesDocumentation">Qubes Documentation</h1>
 <h2 id="ForUsers">For Users</h2>
 <ul>
+<li><a href="/wiki/wiki/QubesDownloads">Installation guides</a></li>
 <li><a href="/wiki/wiki/UserDoc">User's Guide</a></li>
 <li><a href="/wiki/wiki/UserFaq">FAQ</a></li>
 </ul>
