--- a/QubesDocs.html
+++ b/QubesDocs.html
@@ -2,8 +2,8 @@
 <h2 id="ForUsers">For Users</h2>
 <ul>
 <li><a href="/wiki/wiki/QubesDownloads">Installation guides</a></li>
-<li><a href="/wiki/wiki/UserDoc">User's Guide</a></li>
-<li><a href="/wiki/wiki/UserFaq">FAQ</a></li>
+<li><a href="/wiki/wiki/UserDoc">User guide</a></li>
+<li><a href="/wiki/wiki/UserFaq">User FAQ</a></li>
 </ul>
 <h2 id="ForDevelopers">For Developers</h2>
 <ul>
