--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -8,7 +8,7 @@
 </ul>
 <ul>
 <li><a href="/wiki/wiki/HCLR2">Hardware Compatibility List?</a></li>
-<li><a href="/wiki/wiki/InstallationGuideR2">ISO Download and Installation Guide</a></li>
+<li><a href="/wiki/wiki/InstallationGuideR2">Installation Guide</a></li>
 </ul>
 <h2 id="QubesRelease1">Qubes Release 1</h2>
 <ul>
@@ -17,7 +17,7 @@
 </ul>
 <ul>
 <li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
-<li><a href="/wiki/wiki/InstallationGuide">ISO Download and Installation Guide</a></li>
+<li><a href="/wiki/wiki/InstallationGuide">Installation Guide</a></li>
 </ul>
 <h2 id="Mirrors">Mirrors</h2>
 <p>Qubes ISOs are also available from the following mirrors:</p>
