--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -9,6 +9,7 @@
 <ul>
 <li><a href="/wiki/wiki/HCLR2">Hardware Compatibility List?</a></li>
 <li><a href="/wiki/wiki/InstallationGuideR2">Installation Guide</a></li>
+<li><a href="/wiki/wiki/UpgradeToR2">Upgrading from Qubes R1 to Qubes R2?</a></li>
 </ul>
 <h2 id="QubesRelease1">Qubes Release 1</h2>
 <ul>
