--- a/UpgradeToR2B1.html
+++ b/UpgradeToR2B1.html
@@ -1,11 +1,11 @@
 <h1 id="UpgradingQubesR1toR2beta">Upgrading Qubes R1 to R2 (beta)</h1>
 <p><strong>Note: Qubes R2 Beta has not been release yet, DO NOT follow those instructions before R2 Beta is released</strong></p>
-<p>Existing users of Qubes R1 (but not R1 betas!) can upgrade their systems to the latest R2 beta release by following the procedure below. As usual, tt is advisable to backup the system before proceeding with the upgrade</p>
+<p>Existing users of Qubes R1 (but not R1 betas!) can upgrade their systems to the latest R2 beta release by following the procedure below. As usual, it is advisable to backup the system before proceeding with the upgrade</p>
 <h2 id="UpgradeallTemplateandStandaloneVMs">Upgrade all Template and Standalone VM(s)</h2>
 <p>By default, in Qubes R1, there is only one Template VM, however users are free to create more Template VMs for special purposes, as well as Standalone VMs. More information on using multiple Template VMs, as well as Standalone VMs, can be found [SoftwareUpdateVM here]. The steps described in this section should be repeated in <em>all</em> user's Template and Standalone VMs.</p>
 <ol>
-<li>Open terminal in the template VM (or standalone VM). E.g. use the Qubes Manager's right-click menu and choose Run Command in VM and type <strong>gnome-terminal</strong> there.</li>
-<li><p>Install <strong>qubes-upgrade-vm</strong> package (this package brings in R2 repo definitions and R2 keys)</p>
+<li>Open terminal in the template VM (or standalone VM). E.g. use the Qubes Manager's right-click menu and choose Run Command in VM and type <code>gnome-terminal</code> there.</li>
+<li><p>Install <code>qubes-upgrade-vm</code> package (this package brings in R2 repo definitions and R2 keys)</p>
 <pre class="wiki"><code>sudo yum install qubes-upgrade-vm</code></pre></li>
 <li><p>Proceed with normal update in the template (this should bring in also the R2 packages for the VMs):</p>
 <pre class="wiki"><code>sudo yum update</code></pre></li>
@@ -17,9 +17,9 @@
  Package    : qubes-upgrade-vm-1.0-1.fc17.x86_64 (@qubes-vm-current)
  From       : /etc/pki/rpm-gpg/RPM-GPG-KEY-upgrade-qubes-2-primary
 Is this ok [y/N]:</code></pre>
-<p>If you see (as is the case on the &quot;screenshot&quot; above) that the new is was imported from a local filesystem (<strong>/etc/pki/rpm-gpg/...</strong>) you can safely accept the key, without checking its fingerprint. This is because there were only ways for such key to make it to your Template VM's filesystem:</p>
+<p>If you see (as is the case on the &quot;screenshot&quot; above) that the new is was imported from a local filesystem (<code>/etc/pki/rpm-gpg/...</code>) you can safely accept the key, without checking its fingerprint. This is because there were only ways for such key to make it to your Template VM's filesystem:</p>
 <ul>
-<li>via a legitimate RPM package previously installed (in our case it was the qubes-upgrade-vm RPM). Such an RPM must have been signed by one of the keys you decided to trust previously, by default this would be either via the Qubes R1 signing key, or Fedora 17 signing key.</li>
+<li>via a legitimate RPM package previously installed (in our case it was the <code>qubes-upgrade-vm</code> RPM). Such an RPM must have been signed by one of the keys you decided to trust previously, by default this would be either via the Qubes R1 signing key, or Fedora 17 signing key.</li>
 <li>via system compromise or via some illegal RPM package (e.g. Fedora released package pretending to bring new Firefox). In that case, however, your VM is already compromised, and it careful checking of the new R2 key would not change this situation to any better one. The game is lost for this VM anyway (and all VMs based on this template).</li>
 </ul>
 <ol start="4">
