--- a/UpgradeToR2B1.html
+++ b/UpgradeToR2B1.html
@@ -8,8 +8,7 @@
 <li><p>Install <code>qubes-upgrade-vm</code> package (this package brings in R2 repo definitions and R2 keys)</p>
 <pre class="wiki"><code>sudo yum install qubes-upgrade-vm</code></pre></li>
 <li><p>Proceed with normal update in the template (this should bring in also the R2 packages for the VMs):</p>
-<pre class="wiki"><code>sudo yum update</code></pre></li>
-</ol>
+<pre class="wiki"><code>sudo yum update</code></pre>
 <p>The installer (yum) will prompt to accept the new Qubes R2 signing key:</p>
 <pre class="wiki"><code>Importing GPG key 0x0A40E458:
  Userid     : &quot;Qubes OS Release 2 Signing Key&quot;
@@ -17,7 +16,8 @@
  Package    : qubes-upgrade-vm-1.0-1.fc17.x86_64 (@qubes-vm-current)
  From       : /etc/pki/rpm-gpg/RPM-GPG-KEY-upgrade-qubes-2-primary
 Is this ok [y/N]:</code></pre>
-<p>If you see (as is the case on the &quot;screenshot&quot; above) that the new is was imported from a local filesystem (<code>/etc/pki/rpm-gpg/...</code>) you can safely accept the key, without checking its fingerprint. This is because there were only ways for such key to make it to your Template VM's filesystem:</p>
+<p>If you see (as is the case on the &quot;screenshot&quot; above) that the new key was imported from a local filesystem (<code>/etc/pki/rpm-gpg/...</code>) you can safely accept the key, without checking its fingerprint. This is because there were only two ways for such a key to make it to your Template VM's filesystem:</p></li>
+</ol>
 <ul>
 <li>via a legitimate RPM package previously installed (in our case it was the <code>qubes-upgrade-vm</code> RPM). Such an RPM must have been signed by one of the keys you decided to trust previously, by default this would be either via the Qubes R1 signing key, or Fedora 17 signing key.</li>
 <li>via system compromise or via some illegal RPM package (e.g. Fedora released package pretending to bring new Firefox). In that case, however, your VM is already compromised, and it careful checking of the new R2 key would not change this situation to any better one. The game is lost for this VM anyway (and all VMs based on this template).</li>
