--- a/HvmCreate.html
+++ b/HvmCreate.html
@@ -18,3 +18,8 @@
 <p>TODO</p>
 <h2 id="InstallingQubessupporttoolsinWindows7VMs">Installing Qubes support tools in Windows 7 VMs</h2>
 <p>TODO</p>
+<h2 id="AssigningPCIdevicestoHVMdomains">Assigning PCI devices to HVM domains</h2>
+<p>TODO</p>
+<ul>
+<li>Manually disable/enable on resume from S3</li>
+</ul>
