--- a/UserDoc.html
+++ b/UserDoc.html
@@ -1,18 +1,17 @@
 <h1 id="QubesUserGuides">Qubes User Guides</h1>
 <ul>
 <li><a href="/wiki/wiki/GettingStarted">Getting started</a></li>
-<li><a href="/wiki/wiki/HvmCreate">Creating and using HVM domains (in Qubes 2)</a></li>
+<li><a href="/wiki/wiki/HvmCreate">Creating and using HVM domains (Qubes R2 only)</a></li>
 <li><a href="/wiki/wiki/CopyPaste">Copy and paste between domains</a></li>
 <li><a href="/wiki/wiki/CopyingFiles">Copying files between domains</a></li>
-<li><a href="/wiki/wiki/SoftwareUpdateVM">Updating and adding new software to domains</a></li>
+<li><a href="/wiki/wiki/SoftwareUpdateVM">Updating and adding new software to AppVMs</a></li>
 <li><a href="/wiki/wiki/SoftwareUpdateDom0">Updating software in Dom0</a></li>
-<li><a href="/wiki/wiki/ManagerUpdates">Dom0 and VM updates via Qubes Manager?</a></li>
-<li><a href="/wiki/wiki/BackupRestore">Backup/Restore/Migration</a></li>
-<li>Using Disposable VMs</li>
-<li><a href="/wiki/wiki/QubesFirewall">Using Qubes firewall</a></li>
+<li><a href="/wiki/wiki/DisposableVms">Using Disposable VMs</a></li>
+<li><a href="/wiki/wiki/QubesFirewall">Understanding Qubes firewall</a></li>
 <li><a href="/wiki/wiki/StickMounting">How to mount USB stick to an AppVM?</a></li>
 <li><a href="/wiki/wiki/KeyGen">Key generation inside Qubes VMs?</a></li>
-<li><a href="/wiki/wiki/AssigningDevices">How to assign full PCI/e device to a VM?</a></li>
+<li><a href="/wiki/wiki/AssigningDevices">How to assign PCI devices to a VM?</a></li>
+<li><a href="/wiki/wiki/BackupRestore">Qubes Backup/Restore/Migration</a></li>
 </ul>
 <p>Advanced topics:</p>
 <ul>
