--- a/UserDoc.html
+++ b/UserDoc.html
@@ -25,7 +25,12 @@
 <li><a href="/wiki/wiki/UserDoc/XFCE">XFCE</a> installation in dom0</li>
 <li><a href="/wiki/wiki/UserDoc/DispVMCustomization">DispVM Customization</a></li>
 </ul>
-<p>Command-line tools reference:</p>
+<p>Command-line tools reference (Qubes R2):</p>
+<ul>
+<li>[DomZeroToolsR2 Dom0 tools]</li>
+<li>[VmToolsR2 VM tools]</li>
+</ul>
+<p>Command-line tools reference (Qubes R1):</p>
 <ul>
 <li><a href="/wiki/wiki/DomZeroTools">Dom0 tools</a></li>
 <li><a href="/wiki/wiki/VmTools">VM tools</a></li>
