--- a/UserDoc.html
+++ b/UserDoc.html
@@ -27,8 +27,8 @@
 </ul>
 <p>Command-line tools reference (Qubes R2):</p>
 <ul>
-<li>[DomZeroToolsR2 Dom0 tools]</li>
-<li>[VmToolsR2 VM tools]</li>
+<li><a href="/wiki/wiki/DomZeroToolsR2">Dom0 tools?</a></li>
+<li><a href="/wiki/wiki/VmToolsR2">VM tools?</a></li>
 </ul>
 <p>Command-line tools reference (Qubes R1):</p>
 <ul>
