--- a/HvmCreate.html
+++ b/HvmCreate.html
@@ -135,6 +135,15 @@ timezone          : localtime</code></pre>
 /usr/lib/qubes/qubes-windows-tools-201211301354.iso</code></pre>
 <p>Now, in order to install the tools in a Windows VM one should start the VM with the ISO attached:</p>
 <pre class="wiki"><code>qvm-start lab-win7 --cdrom=/usr/lib/qubes/qubes-windows-tools-201211301354.iso</code></pre>
+<p>Once the Windows VM boots, a CDROM should appear in the 'My Computer' menu (typically as <code>D:</code>) with a setup program in its main directory:</p>
+<p>&lt;screeenshot&gt;</p>
+<p>Before proceeding with the installation we need to disable Windows mechanism that allows only signed drivers to be installed, because currently the drivers we provide as part of the Windows Support Tools are not digitally signed with a publicly recognizable certificate. How to do that is explained in the <code>README</code> file also located on the installation CDROM. In the future this step will not be necessary anymore, because we will sign our drivers with a publicly verifiable certificate. However, it should be noted that even now, the fact that those drivers are not digitally signed, this doesn't affect security of the Windows VM in 'any' way. This is because the actual installation ISO (the <code>qubes-windows-tools-*.iso</code> file) is distributed as a signed RPM package and its signature is verified by the <code>qubes-dom0-update</code> utility once it's being installed in Dom0. The only downside of those drivers not being signed is the inconvenience to the user that he or she must disable the signature enforcement policy before installing the tools, and also to accept a few scary looking warning windows during the installation process, as shown below.</p>
+<p>&lt;screenshot&gt;</p>
+<p>After successful installation, the Windows VM must be shut down.</p>
+<p>Additionally, once should inform Qubes that tools have been installed in this VM by setting the <code>qrexec_installed</code> flag in the VM's properties -- this can be done using the <code>qvm-prefs</code> command in Dom0, e.g.:</p>
+<pre class="wiki"><code>qvm-prefs lab-win7 -s qrexec_installed true</code></pre>
+<p>Please verify that the flag has indeed been set by running <code>qvm-prefs</code> command again for this VM.</p>
+<p><strong>Note:</strong> In the future we will likely make this action automatic, as we realize this is a bit cumbersome... Oh, well, this is still Beta, right? ;)</p>
 <h2 id="AssigningPCIdevicestoHVMdomains">Assigning PCI devices to HVM domains</h2>
 <p>TODO</p>
 <ul>
