--- a/HvmCreate.html
+++ b/HvmCreate.html
@@ -142,8 +142,34 @@ timezone          : localtime</code></pre>
 <p>After successful installation, the Windows VM must be shut down.</p>
 <p>Additionally, once should inform Qubes that tools have been installed in this VM by setting the <code>qrexec_installed</code> flag in the VM's properties -- this can be done using the <code>qvm-prefs</code> command in Dom0, e.g.:</p>
 <pre class="wiki"><code>qvm-prefs lab-win7 -s qrexec_installed true</code></pre>
-<p>Please verify that the flag has indeed been set by running <code>qvm-prefs</code> command again for this VM.</p>
-<p><strong>Note:</strong> In the future we will likely make this action automatic, as we realize this is a bit cumbersome... Oh, well, this is still Beta, right? ;)</p>
+<p>Also, by default Qubes assumes that the default user in the Windows VM is named <code>user</code> -- if one has chosen a different user during Windows installation, Qubes should be informed about this by setting the <code>default_user</code> property for the VM, e.g.:</p>
+<pre class="wiki"><code>qvm-prefs lab-win7 -s default_user joanna</code></pre>
+<p>If everything went fine (please remember about the need to reboot the Windows VM after installation of the tools), one can run some simple tests to see if qrexec service runs fine with this VM, e.g.:</p>
+<pre class="wiki"><code>qvm-run lab-win7 calc</code></pre>
+<p>... or something more fancy (a &quot;networkless&quot; telnet to Windows ;):</p>
+<pre class="wiki"><code>[joanna@dom0 ~]$ qvm-run lab-win7 -p cmd.exe
+Microsoft Windows [Version 6.1.7601]
+Copyright (c) 2009 Microsoft Corporation.  All rights reserved.
+
+C:\Windows\system32&gt;dir c:\
+dir c:\
+ Volume in drive C has no label.
+ Volume Serial Number is 64FB-0198
+
+ Directory of c:\
+
+08/26/2012  12:06 PM    &lt;DIR&gt;          DRIVERS
+12/12/2012  03:36 PM    &lt;DIR&gt;          Program Files
+10/25/2012  12:12 PM    &lt;DIR&gt;          Program Files (x86)
+03/22/2012  02:50 PM    &lt;DIR&gt;          SWTOOLS
+03/02/2012  12:22 AM    &lt;DIR&gt;          Users
+12/12/2012  03:40 PM    &lt;DIR&gt;          Windows
+               0 File(s)              0 bytes
+               6 Dir(s)   1,432,260,608 bytes free
+
+C:\Windows\system32&gt;exit
+exit</code></pre>
+<p>Another things to check are if clipboard copy/paste and file copy works fine with this VM.</p>
 <h2 id="AssigningPCIdevicestoHVMdomains">Assigning PCI devices to HVM domains</h2>
 <p>TODO</p>
 <ul>
