--- a/HCL.html
+++ b/HCL.html
@@ -1,4 +1,4 @@
-<h1 id="HardwareCompatibilityListforQubesOS">Hardware Compatibility List for Qubes OS</h1>
+<h1 id="HardwareCompatibilityListforQubesOSR1">Hardware Compatibility List for Qubes OS R1</h1>
 <p>The following is a list of systems that have been tested and seem to work fine with Qubes OS (or mostly fine). Unless otherwise noted, all the systems have support for Intel VT-d, which is needed to properly secure driver domains in Qubes OS (netvm, usbvm, etc). Systems without VT-d are still usable, but you don't get an extra protection from driver domain separation (you still get lots of security benefit from AppVM separation though).</p>
 <h2 id="Generalsystemrequirements">General system requirements</h2>
 <p>Minimum:</p>
