--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -4,7 +4,8 @@
 </ul>
 <h2 id="QubesRelease2">Qubes Release 2</h2>
 <ul>
-<li>Qubes R2 Beta 1 coming soon...</li>
+<li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-Beta1-x86_64-DVD.iso/download">​Qubes-R2-Beta1-x86_64-DVD.iso</a> (via sourceforge.net)</li>
+<li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R2-Beta1-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
 </ul>
 <ul>
 <li><a href="/wiki/wiki/HCLR2">Hardware Compatibility List?</a></li>
