--- a/GettingStarted.html
+++ b/GettingStarted.html
@@ -15,7 +15,7 @@
 <h2 id="QubesManagerandcommandlinetools">Qubes Manager and command line tools</h2>
 <p>All aspects of the Qubes system can be controlled using the command line tools run under a Dom0 console. To open a console window in Dom0, one can e.g. choose Start-&gt;System Tools-&gt;Konsole, or alternatively press Alt-F2 and type in <code>konsole</code>.</p>
 <p>Various command-line tools are described as part of this user's guide, and the whole reference can be found <a href="/wiki/wiki/DomZeroTools">here</a>.</p>
-<p>&lt;snapshot&gt;</p>
+<p><a href="/wiki/attachment/wiki/GettingStarted/r2b1-dom0-konsole.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;r2b1-dom0-konsole.png&quot; attached to GettingStarted" alt="No image &quot;r2b1-dom0-konsole.png&quot; attached to GettingStarted" /></a></p>
 <p>Alternatively one can use a rather intuitive GUI tool called Qubes Manager. It supports most of the functionality that command line tools provide. Qubes Manager window can be opened by either clicking on the &quot;Qubes&quot; icon in the tray (right bottom corner of the screen), or by choosing Start-&gt;System Tools-&gt;Qubes Manager from the &quot;Start menu&quot;.</p>
 <p><a href="/wiki/attachment/wiki/GettingStarted/r2b1-qubes-manager-2.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;r2b1-qubes-manager-2.png&quot; attached to GettingStarted" alt="No image &quot;r2b1-qubes-manager-2.png&quot; attached to GettingStarted" /></a></p>
 <h2 id="Startingappsindomains">Starting apps in domains</h2>
