--- a/QubesDocs.html
+++ b/QubesDocs.html
@@ -1,8 +1,8 @@
 <h1 id="QubesDocumentation">Qubes Documentation</h1>
 <h2 id="ForUsers">For Users</h2>
 <ul>
+<li><strong><a href="/wiki/wiki/UserDoc">User guides</a></strong> &lt;--- You probably want to start here!</li>
 <li><a href="/wiki/wiki/QubesDownloads">Installation guides</a></li>
-<li><a href="/wiki/wiki/UserDoc">User guide</a></li>
 <li><a href="/wiki/wiki/UserFaq">User FAQ</a></li>
 </ul>
 <h2 id="ForDevelopers">For Developers</h2>
