--- a/InstallationGuideR2B1.html
+++ b/InstallationGuideR2B1.html
@@ -47,6 +47,9 @@
 <pre class="wiki"><code>qvm-prefs -s fedora-17-x64-dvm maxmem 3072
 qvm-create-default-dvm --default-template --default-script</code></pre></li>
 </ul>
+<ul>
+<li>Qubes installer/system won't boot from a USB3-attached disks due to missing modules in initramfs (#691). Please use USB2 port/device instead for now.</li>
+</ul>
 <h2 id="GettingHelp">Getting Help</h2>
 <ul>
 <li><strong>User manuals are <a href="/wiki/wiki/UserDoc">here</a>.</strong> (Strongly recommended!)</li>
