--- a/VerifyingSignatures.html
+++ b/VerifyingSignatures.html
@@ -29,7 +29,7 @@ gpg: Total number processed: 1
 gpg:               imported: 1  (RSA: 1)</code></pre>
 <p>You can also download all the currently used developer's keys (and also a copy of the Master Key) in the keys directory on our server:</p>
 <p><a href="http://keys.qubes-os.org/keys/">​http://keys.qubes-os.org/keys/</a></p>
-<p>The developer keys are set to be valid for 1 year only, while the Qubes Master Singing Key has no expiration date. This key has been generated and is kept only within a special 'vault' machine that has no networking, and the private portion (hopefully) is never to leave this isolated machine.</p>
+<p>The developer keys are set to be valid for 1 year only, while the Qubes Master Signing Key has no expiration date. This key has been generated and is kept only within a special 'vault' machine that has no networking, and the private portion (hopefully) is never to leave this isolated machine.</p>
 <h2 id="VerifyingQubescode">Verifying Qubes code</h2>
 <p>Developers who fetch code from our Git server should always verify tags on the latest commit. Any commits that are not followed by a signed tag should not be trusted!</p>
 <p>To verify a signature on a git tag, you can use:</p>
