--- a/InstallationGuideR2B1.html
+++ b/InstallationGuideR2B1.html
@@ -50,6 +50,9 @@ qvm-create-default-dvm --default-template --default-script</code></pre></li>
 <ul>
 <li>Qubes installer/system won't boot from a USB3-attached disks due to missing modules in initramfs (#691). Please use USB2 port/device instead for now.</li>
 </ul>
+<ul>
+<li>Systems with AMD graphics needs additional firmware (missing in default installation), details <a href="http://groups.google.com/group/qubes-devel/browse_thread/thread/e27a57b0eda62f76">​here</a>.</li>
+</ul>
 <h2 id="GettingHelp">Getting Help</h2>
 <ul>
 <li><strong>User manuals are <a href="/wiki/wiki/UserDoc">here</a>.</strong> (Strongly recommended!)</li>
