--- a/DisposableVms.html
+++ b/DisposableVms.html
@@ -7,3 +7,11 @@
 <h2 id="OpeningafreshwebbrowserinstanceinanewDisposableVM">Opening a fresh web browser instance in a new Disposable VM</h2>
 <p>Sometimes it is convenient to open a fresh instance of Firefox within a new fresh Disposable VM. This can be easily done by using the Start Menu: just go to Start -&gt; Disposable VM -&gt; Firefox and wait a few seconds until a web browser starts. Once you close the viewing application then whole Disposable VM will get destroyed.</p>
 <p><a href="/wiki/attachment/wiki/DisposableVms/r1-open-in-dispvm-3.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;r1-open-in-dispvm-3.png&quot; attached to DisposableVms" alt="No image &quot;r1-open-in-dispvm-3.png&quot; attached to DisposableVms" /></a></p>
+<h2 id="OpeningafileinaDisposableVMviacommandlinefromAppVM">Opening a file in a Disposable VM via command line (from AppVM)</h2>
+<p>Use the <code>qvm-open-in-dvm</code> command line (from your AppVM), e.g.:</p>
+<pre class="wiki"><code>[user@work-pub ~]$ qvm-open-in-dvm Downloads/apple-sandbox.pdf</code></pre>
+<p>The qvm-open-in-dvm will not exit until you close the application in the Disposable VM.</p>
+<h2 id="StartinganarbitraryapplicationinadisposableVMviacommandlinefromDom0">Starting an arbitrary application in a disposable VM via command line (from Dom0)</h2>
+<p><strong>Note:</strong> Normally there should be no need for doing this -- this is just for Qubes hackers ;)</p>
+<pre class="wiki"><code>[joanna@dom0 applications]$ echo gnome-terminal | /usr/lib/qubes/qfile-daemon-dvm qubes.VMShell dom0 DEFAULT red</code></pre>
+<p>In fact the Disposable VM appmenu used for starting Firefox contains a very similar command to the above. Please note, however, that it generally makes little sense to start any other application other than a Web Browser this way...</p>
