--- a/UserDoc.html
+++ b/UserDoc.html
@@ -12,6 +12,7 @@
 <li><a href="/wiki/wiki/KeyGen">Key generation inside Qubes VMs?</a></li>
 <li><a href="/wiki/wiki/AssigningDevices">How to assign PCI devices to a VM?</a></li>
 <li><a href="/wiki/wiki/BackupRestore">Qubes Backup/Restore/Migration</a></li>
+<li><a href="/wiki/wiki/QubesPolicies">Central policies for inter-VM services?</a></li>
 </ul>
 <p>Advanced topics:</p>
 <ul>
