--- a/SystemDoc.html
+++ b/SystemDoc.html
@@ -1,6 +1,6 @@
 <h1 id="SystemDocumentationforDevelopers">System Documentation for Developers</h1>
 <ul>
-<li>Qubes OS Architecture v0.3 <a href="http://www.qubes-os.org/files/doc/arch-spec-0.3.pdf">​(pdf)</a> (A bit outdated, but it was the original document that started this all...)</li>
+<li>Qubes OS Architecture v0.3 <a href="http://files.qubes-os.org/files/doc/arch-spec-0.3.pdf">​(pdf)</a> (A bit outdated, but it was the original document that started this all...)</li>
 <li><a href="/wiki/wiki/SecurityCriticalCode">Security-critical elements of Qubes OS</a></li>
 <li><a href="/wiki/wiki/GUIdocs">Qubes GUI virtualization protocol</a></li>
 <li><a href="/wiki/wiki/QubesNet">Networking in Qubes</a></li>
