--- a/QubesFirewall.html
+++ b/QubesFirewall.html
@@ -8,6 +8,6 @@
 </ul>
 <h2 id="Howtoeditrules">How to edit rules</h2>
 <p>In order to edit rules for a given domain, select this domain in the Qubes Manager and press the &quot;firewall&quot; button:</p>
-<p>[Screenshot]</p>
+<p><a href="/wiki/attachment/wiki/QubesFirewall/r2b1-manager-firewall.png"><img src="/wiki/chrome/common/attachment.png" title="No image &quot;r2b1-manager-firewall.png&quot; attached to QubesFirewall" alt="No image &quot;r2b1-manager-firewall.png&quot; attached to QubesFirewall" /></a></p>
 <p>Note that if you specify a rule by DNS name it will be resolved to IP(s) <em>at the moment of applying the rules</em>, and not on the fly for each new connection. This means it will not work for serves using load balancing. More on this in the message quoted below.</p>
 <p>Alternatively, one can use the <code>qvm-firewall</code> command from Dom0 to edit the firewall rules by hand:</p>
