--- a/QubesFirewall.html
+++ b/QubesFirewall.html
@@ -25,3 +25,5 @@
 <pre class="wiki"><code>[user@firewallvm ~]$ sudo bash
 [root@firewallvm user]# echo &quot;iptables -I FORWARD 2 -s 10.137.2.25 -d 10.137.2.6 -j ACCEPT&quot; &gt;&gt; /rw/config/qubes_firewall_user_script</code></pre></li>
 </ul>
+<h2 id="PortforwardingtoanAppVMfromtheoutsideworld">Port forwarding to an AppVM from the outside world</h2>
+<p>TODO</p>
