--- a/QubesDownloads.html
+++ b/QubesDownloads.html
@@ -18,7 +18,7 @@
 <li><a href="http://sourceforge.net/projects/qubesos/files/Qubes-R1-x86_64-DVD.iso.asc/download">​Digital Signature</a> (via sourceforge.net)</li>
 </ul>
 <ul>
-<li><a href="/wiki/wiki/HCL">Hardware Compatibility List</a></li>
+<li><a href="/wiki/wiki/HCLR1">Hardware Compatibility List</a></li>
 <li><a href="/wiki/wiki/InstallationGuide">Installation Guide</a></li>
 </ul>
 <h2 id="Mirrors">Mirrors</h2>
