--- a/HCL.html
+++ b/HCL.html
@@ -20,20 +20,12 @@
 <p><strong>Note:</strong> There is a problem with supporting keyboard and mouse on Mac, and so Mac hardware is currently unsupported (patches welcomed!)</p>
 <h2 id="SpecificsystemsHardwareCompatibilityList">Specific systems Hardware Compatibility List</h2>
 <p>Device</p>
-<table>
-<col style="width: 100%" /><tbody>
-<tr class="odd">
-<td style="text-align: left;"><p>Qubes R1</p></td>
-</tr>
-</tbody>
-</table>
-<table>
-<col style="width: 25%" /><col style="width: 25%" /><col style="width: 25%" /><col style="width: 25%" /><tbody>
-<tr class="odd">
-<td style="text-align: left;"><p>Kernel</p></td>
-<td style="text-align: left;"><p>Xorg</p></td>
-<td style="text-align: left;"><p>VT-d</p></td>
-<td style="text-align: left;"><p>PCI</p></td>
-</tr>
-</tbody>
-</table>
+<p>Kernel</p>
+<p>Xorg</p>
+<p>VT-d</p>
+<p>PCI</p>
+<p>Fujitsu S751 [BR] (i5-2520M; HD3000; QM67; BIOS: 1.18)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
