--- a/HCL.html
+++ b/HCL.html
@@ -24,8 +24,14 @@
 <p>Xorg</p>
 <p>VT-d</p>
 <p>PCI</p>
-<p>Fujitsu S751 [BR] (i5-2520M; HD3000; QM67; BIOS: 1.18)</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
-<p>OK</p>
+<table>
+<col style="width: 20%" /><col style="width: 20%" /><col style="width: 20%" /><col style="width: 20%" /><col style="width: 20%" /><tbody>
+<tr class="odd">
+<td style="text-align: left;"><p>Fujitsu S751 [BR] (i5-2520M; HD3000; QM67; BIOS: 1.18)</p></td>
+<td style="text-align: left;">OK</td>
+<td style="text-align: left;">OK</td>
+<td style="text-align: left;">OK</td>
+<td style="text-align: left;">OK</td>
+</tr>
+</tbody>
+</table>
