--- a/HCL.html
+++ b/HCL.html
@@ -20,18 +20,28 @@
 <p><strong>Note:</strong> There is a problem with supporting keyboard and mouse on Mac, and so Mac hardware is currently unsupported (patches welcomed!)</p>
 <h2 id="SpecificsystemsHardwareCompatibilityList">Specific systems Hardware Compatibility List</h2>
 <p>Device</p>
+<p>Qubes R1</p>
+<p>Qubes R2</p>
 <p>Kernel</p>
 <p>Xorg</p>
 <p>VT-d</p>
 <p>PCI</p>
-<table>
-<col style="width: 20%" /><col style="width: 20%" /><col style="width: 20%" /><col style="width: 20%" /><col style="width: 20%" /><tbody>
-<tr class="odd">
-<td style="text-align: left;"><p>Fujitsu S751 [BR] (i5-2520M; HD3000; QM67; BIOS: 1.18)</p></td>
-<td style="text-align: left;">OK</td>
-<td style="text-align: left;">OK</td>
-<td style="text-align: left;">OK</td>
-<td style="text-align: left;">OK</td>
-</tr>
-</tbody>
-</table>
+<p>Kernel</p>
+<p>Xorg</p>
+<p>VT-x</p>
+<p>VT-d</p>
+<p>PCI</p>
+<p>USB</p>
+<blockquote>
+<p>Fujitsu S751 (i5-2520M; HD3000; QM67; BIOS: 1.18)</p>
+</blockquote>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>not tested</p>
