--- a/HCL.html
+++ b/HCL.html
@@ -33,7 +33,7 @@
 <p>PCI</p>
 <p>USB</p>
 <blockquote>
-<p>Fujitsu S751 (i5-2520M; HD3000; QM67; BIOS: 1.18)</p>
+<p>Fujitsu S751 <br /> (i5-2520M; HD3000; QM67; BIOS: 1.18)</p>
 </blockquote>
 <p>OK</p>
 <p>OK</p>
