--- a/HCL.html
+++ b/HCL.html
@@ -18,7 +18,7 @@
 <p>If you don't meet the additional criteria, you can still install and use Qubes. It still offers significant security improvement over traditional OSes, because things such as GUI isolation, or kernel protection do not require special hardware.</p>
 <p><strong>Note:</strong> We don't recommend installing Qubes in a virtual machine!</p>
 <p><strong>Note:</strong> There is a problem with supporting keyboard and mouse on Mac, and so Mac hardware is currently unsupported (patches welcomed!)</p>
-<h2 id="SpecificsystemsHardwareCompatibilityList">Specific systems Hardware Compatibility List</h2>
+<h2 id="HardwareCompatibilityList">Hardware Compatibility List</h2>
 <p>Device</p>
 <p>Qubes R1</p>
 <p>Qubes R2</p>
@@ -32,9 +32,7 @@
 <p>VT-d</p>
 <p>PCI</p>
 <p>USB</p>
-<blockquote>
-<p>Fujitsu S751 <br /> (i5-2520M; HD3000; QM67; BIOS: 1.18)</p>
-</blockquote>
+<p>Lenovo Thinkpad T420</p>
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
@@ -44,4 +42,59 @@
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
-<p>not tested</p>
+<p>OK</p>
+<p>Lenovo Thinkpad T420s</p>
+<p>3.2.7+</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>Lenovo Thinkpad T61<br /> (Nvidia Quadro NVS 140M)</p>
+<p>OK</p>
+<p>OK</p>
+<p>X</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>X</p>
+<p>OK</p>
+<p>OK</p>
+<p>Samsung X460</p>
+<p>OK</p>
+<p>OK</p>
+<p>X</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>X</p>
+<p>OK</p>
+<p>OK</p>
+<p>Sony Vaio Z 12 <br /> (2010 edition)</p>
+<p>OK</p>
+<p><a href="https://qubes-os.org/trac/wiki/SonyVaioTinkering">OK</a></p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://qubes-os.org/trac/wiki/SonyVaioTinkering">OK</a></p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>Dell Latitude E6420<br /> (Intel HD graphics; Sandy Bridge; i5-2520M)</p>
+<p>3.4.18+</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>3.4.18+</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
