--- a/HCL.html
+++ b/HCL.html
@@ -98,3 +98,80 @@
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
+<p>Fujitsu S751<br /> (HD3000; QM67; i5-2520M; BIOS 1.18)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>not tested</p>
+<p>Sony Vaio Z2<br /> (2011 edition)</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/xoyNCigBvFE/fkC6em-Wqd0J">OK</a></p>
+<p>OK</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>Lenovo Thinkpad W510<br /> (nVidia; i7-Q820)</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/forum/#!msg/qubes-devel/TgDWwBs36yA/IUFZPHs716cJ">OK</a></p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>Lenovo Thinkpad x220<br /> (HD?000; i5-?)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>Dell Latitude 5520</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/group/qubes-devel/msg/7418e7084c2de99f?hl=en">OK</a></p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>Dell Latitude E6520</p>
+<p>OK</p>
+<p><a href="https://groups.google.com/group/qubes-devel/msg/340afc6fc2d06d0e">OK</a></p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>Dell PowerEdge T110 II <br /> (onboard Matrox; Xeon E3-1230)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
