--- a/HCL.html
+++ b/HCL.html
@@ -108,7 +108,7 @@
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
-<p>not tested</p>
+<p>?</p>
 <p>Sony Vaio Z2<br /> (2011 edition)</p>
 <p>OK</p>
 <p>OK</p>
@@ -142,6 +142,17 @@
 <p>?</p>
 <p>?</p>
 <p>?</p>
+<p>Lenovo Thinkpad x230</p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">Custom</a></p>
+<p><a href="https://groups.google.com/d/msg/qubes-devel/XN6JrEXVOVA/lkxGRA00EqgJ">Custom</a></p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
 <p>Dell Latitude 5520</p>
 <p>OK</p>
 <p>OK</p>
@@ -165,6 +176,50 @@
 <p>?</p>
 <p>?</p>
 <p>Dell PowerEdge T110 II <br /> (onboard Matrox; Xeon E3-1230)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>Dell Precision M4600 <br /> (i7-2860QM; NVIDIA Quadro 1000M)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>Toshiba Tecra S11</p>
+<p><a href="https://groups.google.com/group/qubes-devel/browse_thread/thread/fdec0ec165a87726">OK</a></p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>Toshiba Tecra A11-15X <br /> (i7-M620)</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>OK</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>?</p>
+<p>Toshiba M780 S7240 <br /> (BIOS latest)</p>
 <p>OK</p>
 <p>OK</p>
 <p>OK</p>
